--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -6,6 +6,6 @@ $color-estandar: rgb(185, 119, 14);
 $color-fondos:  rgb(74, 35, 90);
 $color-fondos2:  rgb(27, 14, 32);
 $tamano-estandar: 1.2rem;
-
+$fuente-texto: 'Montserrat', sans-serif;
 
 
